src/tests/fixtures/field_values/PromiseOfPromise.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class SomeType {
  /** @gqlField */
  b: Promise<Promise<string>>;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/PromiseOfPromise.invalid.ts:4:14 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to be able to resolve all type references to their declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

4   b: Promise<Promise<string>>;
               ~~~~~~~~~~~~~~~
